@@ -7,3 +7,4 @@ tmp.c
 tmp
 *.LTB
 timeout
+bk_daemon
