@@ -1,3 +1,8 @@
+2003-06-27  Seth Robertson  <seth@startide.sysdetect.com>
+
+	* src/bk_daemon.c: Add old daemonizing program to starting libbk
+	install.  It is not bakaized per se, but it certainly works!
+
 2003-06-25  James Tanis  <jtt@austin.sysdetect.com>
 
 	* include/libbk_inline.h: Reorder inline functions so they inline.
